# feast_sandbox

./: .gitattributes  .gitignore  .gitmodules  README.rst  pyproject.toml  start_docker.sh  start_hive_and_redis.sh  stop_docker.sh
credit_parquet_repo/data/: registry.db
docker_data/: docker-compose.extras.yml
driver_hive_repo/: example.py  feature_store.yaml
driver_hive_repo/data/: registry.db
driver_parquet_repo/: example.py  feature_store.yaml
driver_parquet_repo/data/: online_store.db  registry.db
feast_sandbox/: data_generation.py  fetch_online_data.py  hive_sqla_fuss.py  housing_testing.sql  housing_testing_hive_211.sql  housing_tutorial.py  inspect_online_data.py  main.py  materialize_online_store.py  predict_on_drivers.py  show_traning_data.py  simple_template_fuss.py  train_on_drivers.py  utils.py
feast_sandbox/credit_tutorial/: credit_model.py  populate_hive_base.py  run.py
feast_sandbox/driver_tutorial/: download_driver_data.py  hive_temp_tables_creation_example.sql  inspect_online_data.py  populate_hive_base.py  predict.py  predict_driver.py  predict_on_drivers.py  show_traning_data.py  train.py  train_on_drivers.py
feast_sandbox/fraud_tutorial/: detect_fraud.py  download_data.py  populate_hive_base.py  transactions.parquet  user_account_features.parquet  user_has_fraudulent_transactions.parquet
feast_sandbox/table_search_bugreport/: check_table_name_resolution.py
feast_sandbox/utils/: download_driver_data.py  driver_data.parquet  populate_hive_base.py
feature_repo/: example.py
feature_repo/data/: driver_stats.parquet  registry.db
repos/: init_spark_repo.py
repos/credit_parquet_repo/: feature_store.yaml  features.py
repos/driver_bigquery_repo/: feature_store.yaml  features.py
repos/driver_hive_repo/: feature_store.yaml  features.py  registry.db
repos/driver_parquet_repo/: driver_stats.parquet  feature_store.yaml  features.py  online_store.db  registry.db
repos/feature_repo/: example.py
repos/fraud_bigquery_repo/: feature_store.yaml  features.py
tests/: test_feast_sandbox.py
(+50 files in other folders)
